# jira-tools

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml  tests.yml
src/jira_tools/: cli.py  utils.py
src/jira_tools/commands/: get_statistics.py  links.py  notify_release.py  to_linear.py  weekly_changelog.py
src/tools_shared/: logging.py
tests/: test_get_jira_statistics.py  test_jira_to_linear.py  test_jira_utils.py  test_notify_release.py
