[project]
name = "jira-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "tools-shared",
]

[project.scripts]
jira = "jira_tools.cli:app"

[tool.uv.sources]
tools-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_tools"]
