[project]
name = "jira-tools"
version = "0.1.0"
description = "CLI for working with JIRA issues from the terminal — statistics, Linear cross-linking, release notifications, and changelog generation."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
jira = "jira_tools.cli:app"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_tools", "src/tools_shared"]
